test/compiler/invalid_programs/dependent_types/missing_method_overload.jm
#!TypeError

def call(o, a:Int)
  o(a)
end

def foo()
  puts("foo")
end

call(foo, 12)